[gd_scene load_steps=106 format=3 uid="uid://dx0dnc6bk3njj"]

[ext_resource type="Script" uid="uid://bkr8oo3400kmf" path="res://Scripts/orc.gd" id="1_dat08"]
[ext_resource type="Texture2D" uid="uid://crq170u8u5sq5" path="res://Health Icon en.png" id="2_3c420"]
[ext_resource type="Texture2D" uid="uid://dpitmud7c6cpq" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Idle.png" id="2_7pxyq"]
[ext_resource type="Texture2D" uid="uid://cqpvv8vftundl" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Attack01.png" id="2_gjeer"]
[ext_resource type="Texture2D" uid="uid://cyy10yb3c4qkg" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Death.png" id="3_2ecxu"]
[ext_resource type="Texture2D" uid="uid://bu3mblyx5p7do" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Attack02.png" id="3_4p612"]
[ext_resource type="Texture2D" uid="uid://b88dwnj4lkcq1" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Walk.png" id="3_7pxyq"]
[ext_resource type="Texture2D" uid="uid://dt2lcgavq20iu" path="res://Health Icon Bar 1.png" id="3_8nmmc"]
[ext_resource type="Texture2D" uid="uid://cw678l51uhyrr" path="res://Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Hurt.png" id="4_gjeer"]
[ext_resource type="Script" uid="uid://nrshks2drk03" path="res://Scripts/orc_death.gd" id="6_6c7ed"]
[ext_resource type="Script" uid="uid://d0p3kes70tygh" path="res://Scripts/orc_hurt.gd" id="7_55ma6"]
[ext_resource type="Script" uid="uid://c6a4qac0f7bm0" path="res://Scripts/orc_state_machine.gd" id="7_gjeer"]
[ext_resource type="Script" uid="uid://ddwvccfgrpifm" path="res://Scripts/orc_idle.gd" id="9_7iviw"]
[ext_resource type="Script" uid="uid://412qbmk7lsx6" path="res://Scripts/Orc_Attack.gd" id="10_7iviw"]
[ext_resource type="Script" uid="uid://dv1qbrxeuq268" path="res://Scripts/orc_taunt.gd" id="10_8nmmc"]
[ext_resource type="Script" uid="uid://np40mss3llxp" path="res://Scripts/orc_chase.gd" id="10_bb552"]
[ext_resource type="Script" uid="uid://ncg2ufgsak57" path="res://Scripts/HealthComponentenmy.gd" id="16_3c420"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55ma6"]
bg_color = Color(0.490196, 0.227451, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nrbs"]
bg_color = Color(0.862745, 0.286275, 0.286275, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_da6xx"]
atlas = ExtResource("2_gjeer")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt4ox"]
atlas = ExtResource("2_gjeer")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_35afy"]
atlas = ExtResource("2_gjeer")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya65n"]
atlas = ExtResource("2_gjeer")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dfir"]
atlas = ExtResource("2_gjeer")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrbto"]
atlas = ExtResource("2_gjeer")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnt4c"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8abel"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8odx"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua8h1"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai5c0"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mm0e"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6kt0"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m68uo"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw46r"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_erxru"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lmqh"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6krd"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_58mv0"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_05tnj"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhmf3"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahgtc"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8e5l"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx6tl"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0gyy"]
atlas = ExtResource("3_4p612")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_32im1"]
atlas = ExtResource("3_4p612")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk42c"]
atlas = ExtResource("3_4p612")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwsuq"]
atlas = ExtResource("3_4p612")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_imru5"]
atlas = ExtResource("3_4p612")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t6co"]
atlas = ExtResource("3_4p612")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt7i4"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq54k"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5psmk"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b6vu"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rajhh"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qu5g"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioofl"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj3vv"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_26hak"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4dyw"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt06o"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_37nx7"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwx0d"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6135w"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj4lq"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s5gi"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap1jx"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcdc5"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bynjs"]
atlas = ExtResource("3_2ecxu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts011"]
atlas = ExtResource("3_2ecxu")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wf46"]
atlas = ExtResource("3_2ecxu")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0djo"]
atlas = ExtResource("3_2ecxu")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mghdc"]
atlas = ExtResource("4_gjeer")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j3ui"]
atlas = ExtResource("4_gjeer")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dy34"]
atlas = ExtResource("4_gjeer")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0214r"]
atlas = ExtResource("4_gjeer")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lb25"]
atlas = ExtResource("2_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dat08"]
atlas = ExtResource("2_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iviw"]
atlas = ExtResource("2_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb552"]
atlas = ExtResource("2_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c7ed"]
atlas = ExtResource("2_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_55ma6"]
atlas = ExtResource("2_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ecxu"]
atlas = ExtResource("3_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjeer"]
atlas = ExtResource("3_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p612"]
atlas = ExtResource("3_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nrbs"]
atlas = ExtResource("3_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c420"]
atlas = ExtResource("3_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nmmc"]
atlas = ExtResource("3_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p8xk"]
atlas = ExtResource("3_7pxyq")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_efajb"]
atlas = ExtResource("3_7pxyq")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_54k7q"]
atlas = ExtResource("3_4p612")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_byir3"]
atlas = ExtResource("3_4p612")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_54cms"]
atlas = ExtResource("3_4p612")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmjg2"]
atlas = ExtResource("3_4p612")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2iox"]
atlas = ExtResource("3_7pxyq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7ebc"]
atlas = ExtResource("3_7pxyq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tfoj"]
atlas = ExtResource("3_7pxyq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2srd"]
atlas = ExtResource("3_7pxyq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbdem"]
atlas = ExtResource("3_7pxyq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7udur"]
atlas = ExtResource("3_7pxyq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3dfm"]
atlas = ExtResource("3_7pxyq")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncjpl"]
atlas = ExtResource("3_7pxyq")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_7nrbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_da6xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt4ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35afy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya65n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dfir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrbto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnt4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8abel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8odx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua8h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai5c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mm0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6kt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m68uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw46r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erxru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lmqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6krd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58mv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05tnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhmf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahgtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8e5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx6tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0gyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32im1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk42c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwsuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imru5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t6co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt7i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq54k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5psmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b6vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rajhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qu5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioofl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj3vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26hak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4dyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt06o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37nx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwx0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6135w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj4lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s5gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap1jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcdc5")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bynjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts011")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wf46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0djo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mghdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dy34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0214r")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lb25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dat08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iviw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c7ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ma6")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ecxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjeer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p612")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nrbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c420")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nmmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p8xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efajb")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54k7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byir3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54cms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmjg2")
}],
"loop": true,
"name": &"taunt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2iox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7ebc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tfoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2srd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbdem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7udur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3dfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncjpl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4p612"]
radius = 13.0
height = 38.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7iviw"]
size = Vector2(389, 63)

[sub_resource type="CircleShape2D" id="CircleShape2D_2ecxu"]
radius = 10.0499

[node name="Orc" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_dat08")

[node name="OrcHealthBar UI" type="Node2D" parent="."]
z_index = 1

[node name="OrcHealthBar" type="ProgressBar" parent="OrcHealthBar UI"]
offset_left = -16.0
offset_top = -36.0
offset_right = 27.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_55ma6")
theme_override_styles/fill = SubResource("StyleBoxFlat_7nrbs")
max_value = 200.0
value = 200.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthIconEn" type="Sprite2D" parent="OrcHealthBar UI"]
position = Vector2(-17, -36)
texture = ExtResource("2_3c420")

[node name="HealthIconBar1" type="Sprite2D" parent="OrcHealthBar UI"]
position = Vector2(15, -34)
texture = ExtResource("3_8nmmc")

[node name="Orc State Machine" type="Node" parent="."]
script = ExtResource("7_gjeer")

[node name="OrcIdle" type="Node" parent="Orc State Machine"]
script = ExtResource("9_7iviw")

[node name="OrcAttack" type="Node" parent="Orc State Machine"]
script = ExtResource("10_7iviw")

[node name="OrcChase" type="Node" parent="Orc State Machine"]
script = ExtResource("10_bb552")

[node name="OrcDeath" type="Node" parent="Orc State Machine"]
script = ExtResource("6_6c7ed")

[node name="OrcHurt" type="Node" parent="Orc State Machine"]
script = ExtResource("7_55ma6")

[node name="OrcTaunt" type="Node" parent="Orc State Machine"]
script = ExtResource("10_8nmmc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(2.25, 2.58)
sprite_frames = SubResource("SpriteFrames_7nrbs")
animation = &"walk"

[node name="Orc Body" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_4p612")

[node name="Detection Area" type="Area2D" parent="."]
collision_layer = 4

[node name="Detection Area Collision" type="CollisionShape2D" parent="Detection Area"]
position = Vector2(14.5, -12.5)
shape = SubResource("RectangleShape2D_7iviw")

[node name="Attack Area" type="Area2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 8

[node name="Attack Area Collision" type="CollisionShape2D" parent="Attack Area"]
position = Vector2(-15, 0)
shape = SubResource("CircleShape2D_2ecxu")

[node name="Attack Area Collision2" type="CollisionShape2D" parent="Attack Area"]
position = Vector2(21, 0)
shape = SubResource("CircleShape2D_2ecxu")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("16_3c420")

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="Attack Area Collision3" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(-22, 0)
shape = SubResource("CircleShape2D_2ecxu")

[node name="Attack Area Collision4" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(24, 0)
shape = SubResource("CircleShape2D_2ecxu")

[connection signal="frame_changed" from="AnimatedSprite2D" to="Orc State Machine/OrcAttack" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="AttackHitbox" to="Orc State Machine/OrcAttack" method="_on_attack_hitbox_body_entered"]
